[package]
name = "unpat"
version = "0.1.0"
edition = "2021"
description = "Unboxing the pattern with easy syntax."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true
